--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   animations: ^2.0.11
   package_info_plus: 8.1.2
   flutter_rating_bar: ^4.0.1
+  connectivity_plus: ^6.1.2
 
 
 dev_dependencies:
