--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,9 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/
+
+#/build/
+
 
 # Symbolication related
 app.*.symbols
@@ -41,3 +43,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/build
