--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   image_picker: ^1.1.2
   dartz: ^0.10.1
-  intl: ^0.20.1
+  intl: ^0.19.0
   intl_phone_field: ^3.2.0
   flutter_bloc:
   flutter_svg: ^2.0.10+1
@@ -47,9 +47,15 @@ dependencies:
   cached_network_image: ^3.2.0
   form_field_validator: ^1.1.0
   animations: ^2.0.11
-  package_info_plus: 8.1.2
+  package_info_plus: ^8.1.3
   flutter_rating_bar: ^4.0.1
   connectivity_plus: ^6.1.2
+  flutter_localizations:
+    sdk: flutter
+  equatable: ^2.0.5
+  country_icons: ^3.0.0
+  
+
 
 
 dev_dependencies:
@@ -77,7 +83,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  generate: true
 
   assets:
     - assets/images/
@@ -137,3 +143,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
