--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   country_icons: ^3.0.0
   bloc: ^9.0.0
   firebase_core: 2.24.0
+  firebase_auth: ^4.15.0
+  cloud_firestore: ^4.13.3
+  cloudinary: ^1.2.0
+  flutter_dotenv: ^5.2.1
   
 
 
@@ -90,6 +94,7 @@ flutter:
   generate: true
 
   assets:
+    - .env
     - assets/images/
     - assets/icons/
     - assets/icons/Arrow - Right.svg
